Ajustes en la clase fecha abstracta y en otras clases